chore: 整理项目结构，清理冗余文档、脚本及临时文件